--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>johnny</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Welcome to my website</h1>
+    <header>
+        <nav class="navbar navbar-expand-sm bg-dark justify-content-center">
+            <ul class="navbar-nav">
+              <li class="nav-item fs-4 ms-3 me-3">
+                <a class="nav-link text-white-50" href="#">Link 1</a>
+              </li>
+              <li class="nav-item fs-4 ms-3 me-3">
+                <a class="nav-link text-white-50" href="#">Link 2</a>
+              </li>
+              <li class="nav-item fs-4 ms-3 me-3">
+                <a class="nav-link text-white-50" href="#">Link 3</a>
+              </li>
+              <li class="nav-item fs-4 ms-3 me-3">
+                <a class="nav-link text-white-50" href="#">Link 4</a>
+              </li>
+            </ul>
+          </nav>
+    </header>
+
+    <main>
+        <p>Content</p>
+    </main>
+
+    <footer>
+        <p>Contact</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
