--- a/index.html
+++ b/index.html
@@ -1,45 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>johnny</title>
-    <link rel="icon" href="Icon/logo_johnny_shortcut.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="Icon/logo_johnny_shortcut.ico" type="image/x-icon">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm bg-dark justify-content-center">
-            <ul class="navbar-nav">
-              <li class="nav-item fs-4 ms-3 me-3">
-                <a class="nav-link text-white-50" href="#">Link 1</a>
-              </li>
-              <li class="nav-item fs-4 ms-3 me-3">
-                <a class="nav-link text-white-50" href="#">Link 2</a>
-              </li>
-              <li class="nav-item fs-4 ms-3 me-3">
-                <a class="nav-link text-white-50" href="#">Link 3</a>
-              </li>
-              <li class="nav-item fs-4 ms-3 me-3">
-                <a class="nav-link text-white-50" href="#">Link 4</a>
-              </li>
-            </ul>
-          </nav>
-    </header>
+        <title>Johnny Tran</title>
+        <link rel="icon" href="Icon/logo_johnny_shortcut.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="Icon/logo_johnny_shortcut.ico" type="image/x-icon" />
 
-    <main>
-        <p>Content</p>
-    </main>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="index.css" />
+    </head>
+    <body>
+        <header>
+            <nav class="navbar navbar-expand-sm bg-black justify-content-center">
+                <a class="navbar-brand me-auto ms-5" href="#">
+                    <img src="Image/logo.jpg" alt="Avatar Logo" style="width: 150px" />
+                </a>
+                <ul class="navbar-nav me-5">
+                    <li class="nav-item fs-4 ms-3 me-3">
+                        <a class="nav-link text-white-50" href="#">Link 1</a>
+                    </li>
+                    <li class="nav-item fs-4 ms-3 me-3">
+                        <a class="nav-link text-white-50" href="#">Link 2</a>
+                    </li>
+                    <li class="nav-item fs-4 ms-3 me-3">
+                        <a class="nav-link text-white-50" href="#">Link 3</a>
+                    </li>
+                    <li class="nav-item fs-4 ms-3 me-3">
+                        <a class="nav-link text-white-50" href="#">Link 4</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 
-    <footer>
-        <p>Contact</p>
-    </footer>
+        <main>
+            <img src="Image/software_developer.jpg" class="img-fluid" alt="Banner" />
+            <p>Content</p>
+        </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="index.js"></script>
-</body>
+        <!-- Remove the container if you want to extend the Footer to full width. -->
+        <!-- <div class="container my-5"> -->
+            <!-- Footer -->
+            <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
+                <!-- Section: Social media -->
+                <section
+                    class="d-flex justify-content-between p-4"
+                    style="background-color: #6351ce"
+                >
+                    <!-- Left -->
+                    <div class="me-5">
+                        <span>Get connected with us on social networks:</span>
+                    </div>
+                    <!-- Left -->
+
+                    <!-- Right -->
+                    <div>
+                        <a href="https://www.facebook.com/thanhdt114/" class="text-white me-4"><i class="fa fa-facebook-f"></i></a>
+                        <a href="" class="text-white me-4"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://github.com/thanhdt114" class="text-white me-4"><i class="fa fa-github"></i></a>
+                    </div>
+                    <!-- Right -->
+                </section>
+                <!-- Section: Social media -->
+
+                <!-- Section: Links  -->
+                <section class="">
+                    <div class="container text-center text-md-start mt-5">
+                        <!-- Grid row -->
+                        <div class="row mt-3">
+                            <!-- Grid column -->
+                            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                                <!-- Content -->
+                                <h6 class="text-uppercase fw-bold">Company name</h6>
+                                <hr
+                                    class="mb-4 mt-0 d-inline-block mx-auto"
+                                    style="width: 60px; background-color: #7c4dff; height: 2px"
+                                />
+                                <p>
+                                    Here you can use rows and columns to organize your footer
+                                    content. Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit.
+                                </p>
+                            </div>
+                            <!-- Grid column -->
+
+                            <!-- Grid column -->
+                            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                                <!-- Links -->
+                                <h6 class="text-uppercase fw-bold">Products</h6>
+                                <hr
+                                    class="mb-4 mt-0 d-inline-block mx-auto"
+                                    style="width: 60px; background-color: #7c4dff; height: 2px"
+                                />
+                                <p>
+                                    <a href="#!" class="text-white">MDBootstrap</a>
+                                </p>
+                                <p>
+                                    <a href="#!" class="text-white">MDWordPress</a>
+                                </p>
+                                <p>
+                                    <a href="#!" class="text-white">BrandFlow</a>
+                                </p>
+                                <p>
+                                    <a href="#!" class="text-white">Bootstrap Angular</a>
+                                </p>
+                            </div>
+                            <!-- Grid column -->
+
+                            <!-- Grid column -->
+                            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                                <!-- Links -->
+                                <h6 class="text-uppercase fw-bold">Useful links</h6>
+                                <hr
+                                    class="mb-4 mt-0 d-inline-block mx-auto"
+                                    style="width: 60px; background-color: #7c4dff; height: 2px"
+                                />
+                                <p>
+                                    <a href="#!" class="text-white">Your Account</a>
+                                </p>
+                                <p>
+                                    <a href="#!" class="text-white">Become an Affiliate</a>
+                                </p>
+                                <p>
+                                    <a href="#!" class="text-white">Shipping Rates</a>
+                                </p>
+                                <p>
+                                    <a href="#!" class="text-white">Help</a>
+                                </p>
+                            </div>
+                            <!-- Grid column -->
+
+                            <!-- Grid column -->
+                            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                                <!-- Links -->
+                                <h6 class="text-uppercase fw-bold">Contact</h6>
+                                <hr
+                                    class="mb-4 mt-0 d-inline-block mx-auto"
+                                    style="width: 60px; background-color: #7c4dff; height: 2px"
+                                />
+                                <p><i class="fa fa-home mr-3"></i> New York, NY 10012, US</p>
+                                <p><i class="fa fa-envelope mr-3"></i> info@example.com</p>
+                                <p><i class="fa fa-phone mr-3"></i> + 01 234 567 88</p>
+                                <p><i class="fa fa-print mr-3"></i> + 01 234 567 89</p>
+                            </div>
+                            <!-- Grid column -->
+                        </div>
+                        <!-- Grid row -->
+                    </div>
+                </section>
+                <!-- Section: Links  -->
+
+                <!-- Copyright -->
+                <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+                    © 2020 Copyright:
+                    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+                </div>
+                <!-- Copyright -->
+            </footer>
+            <!-- Footer -->
+        </div>
+        <!-- End of .container -->
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="index.js"></script>
+    </body>
 </html>
