--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
 
         <main>
             <img src="Image/software_developer.jpg" class="img-fluid" alt="Banner" />
-            <p>Content</p>
+            <p>Welcome to my website</p>
+            <p>I am currently pursuing a Bachelor's degree in Computer Science, and my academic journey has been a thrilling exploration into the vast world of technology. Throughout my studies, I have developed a keen interest in various aspects of computer science, ranging from software development to network security.
+
+                <br><br>What truly sets me apart is my hands-on experience in both personal and collaborative projects. I have dedicated a significant amount of my time to working on personal software development projects, allowing me to fine-tune my coding skills and gain practical knowledge of different programming languages and frameworks.
+                
+                <br><br>In addition to my individual endeavors, I have had the privilege of participating in real-world projects. These experiences have been invaluable in shaping my understanding of how technology can be leveraged to address complex problems in various industries. Collaborating with cross-functional teams, I have had the opportunity to apply my technical skills to deliver solutions that meet practical needs and exceed expectations.
+                
+                <br><br>I am a firm believer in the power of technology to drive innovation and improve the way we live and work. As I continue my academic and professional journey in the field of computer science, I am excited to take on new challenges, contribute to meaningful projects, and continue to expand my knowledge and skills in this ever-evolving domain.</p>
         </main>
 
         <!-- Remove the container if you want to extend the Footer to full width. -->
@@ -54,7 +61,7 @@
                 >
                     <!-- Left -->
                     <div class="me-5">
-                        <span>Get connected with us on social networks:</span>
+                        <span>Get connected with me on social networks:</span>
                     </div>
                     <!-- Left -->
 
@@ -143,10 +150,10 @@
                                     class="mb-4 mt-0 d-inline-block mx-auto"
                                     style="width: 60px; background-color: #7c4dff; height: 2px"
                                 />
-                                <p><i class="fa fa-home mr-3"></i> New York, NY 10012, US</p>
-                                <p><i class="fa fa-envelope mr-3"></i> info@example.com</p>
-                                <p><i class="fa fa-phone mr-3"></i> + 01 234 567 88</p>
-                                <p><i class="fa fa-print mr-3"></i> + 01 234 567 89</p>
+                                <p><i class="fa fa-home mr-3"></i> Ho Chi Minh City, VN</p>
+                                <p><i class="fa fa-envelope mr-3"></i> thanhdt114@gmail.com</p>
+                                <!-- <p><i class="fa fa-phone mr-3"></i> + 01 234 567 88</p>
+                                <p><i class="fa fa-print mr-3"></i> + 01 234 567 89</p> -->
                             </div>
                             <!-- Grid column -->
                         </div>
