--- a/index.html
+++ b/index.html
@@ -193,22 +193,20 @@
           class="u-align-left u-container-style u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-group u-group-1"
         >
           <div class="u-container-layout u-container-layout-1">
-            <h5 class="u-text u-text-1">About me</h5>
+            <h5 class="u-text u-text-1">My Skills</h5>
             <h2 class="u-custom-font u-font-oswald u-text u-text-2">
               Johnny Tran
             </h2>
             <p class="u-text u-text-3">
-              Hi, my name is Thanh but people often call me Johnny
+              I am 1 developer who builds websites in popular
               <a
-                href="https://nicepage.com"
+                href="https://www.geeksforgeeks.org/introduction-to-programming-languages"
                 class="u-border-1 u-border-hover-palette-2-light-2 u-border-white u-btn u-button-style u-none u-text-body-alt-color u-btn-1"
-                >quis elementum</a
-              >. Phasellus sed efficitur dolor, et ultricies sapien. Quisque
-              fringilla sit amet dolor commodo efficitur. Aliquam et sem odio.
-              In ullamcorper nisi nunc, et molestie ipsum iaculis sit amet.
+                > programming languages</a
+              > using the platforms of these languages. In addition, I can also use microsoft office tools to serve me in the process of working 
             </p>
             <a
-              href="https://nicepage.com"
+              href="http://johnny.id.vn"
               class="u-border-radius-50 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-1-base u-btn-2"
               >learn more</a
             >
@@ -271,11 +269,11 @@
                       <h4
                         class="u-custom-font u-font-oswald u-text u-text-default u-text-4"
                       >
-                        Sample Headline
+                        Coding
                       </h4>
                       <p class="u-text u-text-default u-text-grey-50 u-text-5">
-                        Sample text. Click to select the text box. Click again
-                        or double click to start editing the text.
+                        Programming languages: JAVA, C#, C++, Python, HTML, CSS
+                        <br> Platforms: Spring Boot, Spring MVC, ASP.NET
                       </p>
                     </div>
                   </div>
@@ -314,11 +312,10 @@
                       <h4
                         class="u-custom-font u-font-oswald u-text u-text-default u-text-6"
                       >
-                        Sample Headline
+                        Database
                       </h4>
                       <p class="u-text u-text-default u-text-grey-50 u-text-7">
-                        Sample text. Click to select the text box. Click again
-                        or double click to start editing the text.
+                        MySQL, SQL Server, MongoDB
                       </p>
                     </div>
                   </div>
@@ -396,11 +393,10 @@
                       <h4
                         class="u-custom-font u-font-oswald u-text u-text-default u-text-8"
                       >
-                        Sample Headline
+                        Git
                       </h4>
                       <p class="u-text u-text-default u-text-grey-50 u-text-9">
-                        Sample text. Click to select the text box. Click again
-                        or double click to start editing the text.
+                        Github
                       </p>
                     </div>
                   </div>
@@ -456,11 +452,10 @@
                       <h4
                         class="u-custom-font u-font-oswald u-text u-text-default u-text-10"
                       >
-                        Sample Headline
+                        Microsoft Office
                       </h4>
                       <p class="u-text u-text-default u-text-grey-50 u-text-11">
-                        Sample text. Click to select the text box. Click again
-                        or double click to start editing the text.
+                        Word, Excel, PowerPoint
                       </p>
                     </div>
                   </div>
@@ -515,7 +510,7 @@
                     <h2
                       class="u-text u-text-default u-text-palette-2-base u-text-1"
                     >
-                      What We Offer:
+                    Solve 1 problem: 2W1H
                     </h2>
                     <ul class="u-custom-list u-text u-text-default u-text-2">
                       <li>
@@ -536,7 +531,7 @@
                           </svg>
                         </div>
                       </li>
-                      <li>Duis aute irure dolor in</li>
+                      <li>What it is?</li>
                       <li>
                         <div class="u-list-icon u-text-palette-2-base">
                           <svg
@@ -554,7 +549,7 @@
                             ></path>
                           </svg>
                         </div>
-                        Excepteur sint occaecat
+                        Why use it?
                       </li>
                       <li>
                         <div class="u-list-icon u-text-palette-2-base">
@@ -573,9 +568,9 @@
                             ></path>
                           </svg>
                         </div>
-                        Ut enim ad minim
+                        How to use it?
                       </li>
-                      <li>
+                      <!-- <li>
                         <div class="u-list-icon u-text-palette-2-base">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -593,7 +588,7 @@
                           </svg>
                         </div>
                         Lorem ipsum dolor
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
                 </div>
@@ -616,7 +611,7 @@
                       About me
                     </h2>
                     <p class="u-text u-text-default u-text-5">
-                      Hi, my name is Thanh but people often call me Johnny
+                      Hi, my name is Thanh but people often call me Johnny, currently I am living and working in Ho Chi Minh City, Vietnam, my main job is 1 developer building backend website. I like to train my body, plus I have a hobby of singing.
                     </p>
 
                     <a
@@ -718,16 +713,15 @@
                   class="u-container-layout u-valign-middle u-container-layout-2"
                 >
                   <h2 class="u-text u-text-palette-2-base u-text-1">
-                    Creative Thinking
+                    Thinking in life
                   </h2>
                   <p class="u-text u-text-2">
-                    Sample text. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit nullam nunc justo sagittis suscipit
-                    ultrices.
+                    You only really understand 1 problem when you can give yourself examples and explain to others.
+                    <br>In every argument as long as you can't keep your composure, you have lost.
                   </p>
 
                   <a
-                    href="https://nicepage.com"
+                    href="http://johnny.id.vn"
                     class="u-border-radius-50 u-btn u-btn-round u-button-style u-hover-palette-4-light-1 u-palette-1-base u-btn-2"
                     >learn more</a
                   >
@@ -794,19 +788,15 @@
                         class="u-container-layout u-valign-middle u-container-layout-1"
                       >
                         <h5 class="u-custom-font u-text u-text-font u-text-1">
-                          What We Do
+                          My University 
                         </h5>
                         <h2
                           class="u-custom-font u-font-oswald u-text u-text-palette-2-base u-text-2"
                         >
-                          About Us &amp; Our Work
+                          HCMUTE 
                         </h2>
                         <p class="u-text u-text-3">
-                          Duis aute irure dolor in reprehenderit in voluptate
-                          velit esse cillum dolore eu fugiat nulla pariatur.
-                          Excepteur sint occaecat cupidatat non proident, sunt
-                          in culpa qui officia deserunt mollit anim id est
-                          laborum.
+                          Ho Chi Minh City University of Technology (HCMUT) is a renowned technical institution in Ho Chi Minh City, Vietnam. Established in 1962, it offers diverse engineering and technology programs, emphasizing practical skills and innovation.
                         </p>
                         <span
                           class="u-icon u-icon-circle u-text-custom-color-4 u-icon-1"
@@ -888,8 +878,7 @@
                     class="u-container-layout u-valign-top u-container-layout-4"
                   >
                     <p class="u-text u-text-custom-color-4 u-text-6">
-                      Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                      laboris nisi ut aliquip ex ea commodo consequat.
+                      I studied Information Technology, majored in Software Engineering at HCMUTE, thanks to teachers and friends in school for giving me enough knowledge to later apply for a job in the field that I studied when I graduated.
                     </p>
                   </div>
                 </div>
@@ -927,14 +916,14 @@
                     >
                       <div
                         class="u-container-layout u-valign-middle u-container-layout-8"
-                        style="background-image: url('Image/me.jpg'); background-size: cover;"
+                        style="background-image: url('Image/19110CL1.png'); background-size: cover;"
                       >
-                        <h4 class="u-text u-text-body-alt-color u-text-9">
+                        <!-- <h4 class="u-text u-text-body-alt-color u-text-9">
                           CASES
                         </h4>
                         <h1 class="u-text u-text-body-alt-color u-text-10">
                           15k
-                        </h1>
+                        </h1> -->
                       </div>
                     </div>
                   </div>
