--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
                       <div
                         class="u-container-layout u-valign-middle u-container-layout-8"
                         style="
-                          background-image: url('Image/19110CL1.png');
+                          background-image: url('Image/19110CL1.jpg');
                           background-size: cover;
                         "
                       >
