--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
         style="background-color: #242526"
       >
       <div class="container-fluid">
-        <a class="navbar-brand me-auto ms-5" href="#">
-          <img src="Image/logo.jpg" alt="Avatar Logo" style="width: 150px" />
+        <a class="navbar-brand me-auto ms-3 logo-nav" href="#">
+          <img clas="logo-nav-img" src="Image/logo-JT.png" alt="Avatar Logo" style="width: 65px;" />
+          Johnny Tran
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse" style="justify-content: center;" id="collapsibleNavbar">
           <ul class="navbar-nav me-5" style="margin: 0">
             <li class="nav-item fs-5 ms-3 me-3">
               <a class="nav-link nav-color" href="#carousel_65e8">Home</a>
@@ -533,7 +534,7 @@
                   class="u-align-left u-container-style u-image u-layout-cell u-left-cell u-size-40 u-image-2"
                   data-image-width="800"
                   data-image-height="720"
-                  style="background-image: url('Image/me.jpg')"
+                  style="background-image: url('Image/DiDuDamCuoi.jpg')"
                 >
                   <div
                     class="u-border-6 u-border-white u-container-layout u-container-layout-1"
@@ -905,7 +906,7 @@
                           <div
                             class="u-container-layout u-valign-middle u-container-layout-3"
                             style="
-                              background-image: url('Image/logo-hcmute.jpg');
+                              background-image: url('Image/CongTruongHCMUTE.jpg');
                               background-size: cover;
                             "
                           >
