fix hinh DiDuDamCuoi jpg to JPG

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                   class="u-align-left u-container-style u-image u-layout-cell u-left-cell u-size-40 u-image-2"
                   data-image-width="800"
                   data-image-height="720"
-                  style="background-image: url('Image/DiDuDamCuoi.jpg')"
+                  style="background-image: url('Image/DiDuDamCuoi.JPG')"
                 >
                   <div
                     class="u-border-6 u-border-white u-container-layout u-container-layout-1"
