add logo on title

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="Digital Art&amp;amp; Design Studio, Our Mission, Need Amazing Design?, About Us &amp;amp; Our Work, 8k, 10k, 15k"
     />
     <meta name="description" content="" />
+    <link rel="icon" type="image/png" href="Image/logo-JT.png">
     <title>Johnny</title>
     <link rel="stylesheet" href="css/nicepage.css" media="screen" />
     <link rel="stylesheet" href="css/Home-1.css" media="screen" />
