add sub when share link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       }
     </script>
     <meta name="theme-color" content="#f49ea8" />
-    <meta property="og:title" content="Home 1" />
+    <meta property="og:title" content="Johnny Tran" />
     <meta property="og:type" content="website" />
     <meta data-intl-tel-input-cdn-path="intlTelInput/" />
 
