--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="description" content="" />
     <link rel="icon" type="image/png" href="Image/logo-JT.png">
-    <title>Johnny</title>
+    <title>Johnny Tran</title>
     <link rel="stylesheet" href="css/nicepage.css" media="screen" />
     <link rel="stylesheet" href="css/Home-1.css" media="screen" />
     <script
@@ -62,7 +62,7 @@
   </head>
   <body
     data-home-page="https://website5996200.nicepage.io/Home-1.html?version=100db732-f7c7-d600-840e-ea96506a804b"
-    data-home-page-title="Home 1"
+    data-home-page-title="Johnny Tran"
     data-path-to-root="/"
     class="u-body u-xl-mode"
     data-lang="en"
