--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
                           HCMUTE
                         </h2>
                         <p class="u-text u-text-3">
-                          Ho Chi Minh City University of Technology (HCMUT) is a
+                          Ho Chi Minh City University of Technology and Education (HCMUTE) is a
                           renowned technical institution in Ho Chi Minh City,
                           Vietnam. Established in 1962, it offers diverse
                           engineering and technology programs, emphasizing
